# reachy-vec

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  pipelines.md  testing.md  voice-cloning.md
docs/superpowers/plans/: 2026-07-06-phase0-rag-foundation.md  2026-07-06-phase0a-embeddings-store.md  2026-07-06-phase0b-ingestion.md  2026-07-06-phase0c-rag-chat.md  2026-07-06-phase1-oracle.md  2026-07-06-phase1.5-mongo-fallback-stt.md  2026-07-06-phase1a-body.md  2026-07-06-phase1b-voice.md  2026-07-06-phase1c-faces.md  2026-07-06-phase1d-oracle-loop.md  2026-07-07-phase3-messenger-weather-streaming.md  2026-07-08-phase2b-speaker-id-fusion.md  2026-07-08-retrieval-accuracy.md  2026-07-08-tts-voice-clone.md  2026-07-09-phase4a-on-robot-media.md  2026-07-09-phase4b-robot-host-resilience.md  2026-07-09-phase4c-barge-in.md  2026-07-09-tools-web-search-and-time.md  2026-07-13-camera-tools.md  2026-07-15-speech-motion.md  2026-07-15-wake-flourish.md
docs/superpowers/specs/: 2026-07-06-phase1-oracle-design.md  2026-07-06-phase1.5-mongo-fallback-stt-design.md  2026-07-06-team-familiar-design.md  2026-07-07-conversational-brain-design.md  2026-07-07-phase2a-companion-design.md  2026-07-07-phase2b-speaker-id-fusion-design.md  2026-07-08-phase2c-voice-bargein-design.md  2026-07-08-retrieval-accuracy-design.md  2026-07-08-tts-voice-clone-design.md  2026-07-09-phase4-hardware-bringup-design.md  2026-07-09-record-voice-command-design.md  2026-07-13-camera-tools-design.md  2026-07-13-look-tool-design.md  2026-07-15-speech-motion-design.md  2026-07-15-wake-flourish-design.md
src/reachy_vec/: __init__.py  body.py  brain.py  cli.py  config.py  listen.py  perception.py  speak.py  store.py
src/reachy_vec/audio/: __init__.py  listen.py  record.py  resample.py  sources.py  speak.py
src/reachy_vec/body/: __init__.py  motions.py  robot.py  sway.py
src/reachy_vec/brain/: __init__.py  chat.py  intents.py  loop.py  oracle.py  rag.py
src/reachy_vec/cli/: __init__.py  chat.py  dashboard.py  enroll.py  ingest.py  record_voice.py  run.py  sync.py
src/reachy_vec/perception/: __init__.py  camera.py  face.py  fusion.py  preview.py  vision.py  voice.py
src/reachy_vec/store/: __init__.py  db.py  embeddings.py  ingestion.py  mongo_sync.py  schemas.py
tests/: conftest.py  test_body.py  test_camera.py  test_chat_brain.py  test_cli.py  test_config_camera.py  test_dashboard.py  test_embeddings.py  test_face.py  test_fusion.py  test_ingestion.py  test_listen.py  test_loop.py  test_memories_store.py  test_messages_store.py  test_mongo_sync.py  test_oracle.py  test_people_store.py  test_preview.py  test_rag.py  test_record_voice.py  test_resample.py  test_sources.py  test_speak.py  test_store.py  test_store_scored.py  test_sway.py  test_transcriber_factory.py  test_vision.py  test_voice.py  test_voices_store.py
