[project]
name = "reachy-vec"
version = "0.1.0"
description = "Team Familiar: an embodied team assistant on Reachy Mini with face/voice recognition and a vector knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reachy-mini[mujoco]>=1.8.4",
    "lancedb>=0.15",
    "openai>=1.50",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "sentence-transformers>=3.0",
    "sounddevice>=0.5.5",
    "silero-vad>=6.2.1",
    "faster-whisper>=1.2.1",
    "insightface>=1.0.1",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "pymongo>=4.17.0",
]

[project.optional-dependencies]
# Phase 1+ — perception and audio models (heavy; install when hardware work starts)
perception = [
    "speechbrain>=1.0",  # speaker ID, Phase 2
]

[project.scripts]
reachy-vec = "reachy_vec.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_vec"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
