[project]
name = "reachy-vec"
version = "0.1.0"
description = "Team Familiar: an embodied team assistant on Reachy Mini with face/voice recognition and a vector knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reachy-mini[mujoco]>=1.8.4",
    "lancedb>=0.15",
    "openai>=1.50",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "sentence-transformers>=3.0",
    "sounddevice>=0.5.5",
    "silero-vad>=6.2.1",
    "faster-whisper>=1.2.1",
    "insightface>=1.0.1",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "pymongo>=4.17.0",
    "speechbrain>=1.1.0",
    "mlx-audio>=0.4.4",
]

[project.scripts]
reachy-vec = "reachy_vec.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_vec"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]
